Если нет предмета у бота

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -486,6 +486,13 @@
       "subscription_expiring_message": "Your subscription expires in {{days}} days",
       "item_withdrawn": "Item Withdrawn",
       "item_withdrawn_message": "Item {{itemName}} successfully sent to Steam",
+      "withdrawal_item_not_in_stock": "Item temporarily out of stock",
+      "withdrawal_item_not_in_stock_message": "Item \"{{itemName}}\" was not found in the bot inventory. You can get {{value}} ChiCoins or wait — we will retry the withdrawal later.",
+      "withdrawal_no_stock_choice_title": "Choose an action",
+      "withdrawal_no_stock_choice_chicoins": "Get {{value}} ChiCoins",
+      "withdrawal_no_stock_choice_wait": "Wait",
+      "withdrawal_no_stock_success_chicoins": "ChiCoins added to balance",
+      "withdrawal_no_stock_success_wait": "Request is back in queue. Withdrawal will be retried automatically.",
       "item_sold": "Item Sold",
       "item_sold_message": "Item {{itemName}} sold for {{amount}}₽",
       "welcome": "Welcome!",
