--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -516,6 +516,13 @@
       "subscription_expiring_message": "Ваша подписка истекает через {{days}} дней",
       "item_withdrawn": "Предмет выведен",
       "item_withdrawn_message": "Предмет {{itemName}} успешно отправлен в Steam",
+      "withdrawal_item_not_in_stock": "Предмет временно отсутствует у бота",
+      "withdrawal_item_not_in_stock_message": "Предмет «{{itemName}}» не найден в инвентаре бота. Вы можете получить ChiCoins на сумму {{value}} или подождать — мы повторим попытку вывода позже.",
+      "withdrawal_no_stock_choice_title": "Выберите действие",
+      "withdrawal_no_stock_choice_chicoins": "Получить {{value}} ChiCoins",
+      "withdrawal_no_stock_choice_wait": "Подождать",
+      "withdrawal_no_stock_success_chicoins": "На баланс зачислено ChiCoins",
+      "withdrawal_no_stock_success_wait": "Заявка снова в очереди. Попытка вывода повторится автоматически.",
       "item_sold": "Предмет продан",
       "item_sold_message": "Предмет {{itemName}} продан за {{amount}} ChiCoins",
       "welcome": "Добро пожаловать!",
