--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -157,6 +157,10 @@
     "steam_profile": "Steam профиль",
     "select_avatar": "Выберите аватар",
     "select_avatar_first": "Выберите аватар",
+    "use_steam_avatar": "Использовать аватар из Steam",
+    "avatar_reset_to_steam": "Аватар сброшен, используется аватар из Steam",
+    "avatar_updated": "Аватар успешно обновлён",
+    "avatar_update_error": "Не удалось обновить аватар",
     "trade_url": "Trade URL",
     "user_not_found": "Пользователь не найден",
     "please_login": "Пожалуйста, войдите в систему",
