--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -154,6 +154,10 @@
     "steam_profile": "Steam Profile",
     "select_avatar": "Select avatar",
     "select_avatar_first": "Select an avatar first",
+    "use_steam_avatar": "Use Steam avatar",
+    "avatar_reset_to_steam": "Avatar reset to Steam",
+    "avatar_updated": "Avatar updated successfully",
+    "avatar_update_error": "Failed to update avatar",
     "trade_url": "Trade URL",
     "user_not_found": "User not found",
     "please_login": "Please sign in",
